
AM_CPPFLAGS = -I${top_srcdir}
AM_LDFLAGS = -release $(PACKAGE_VERSION)
includedir = $(prefix)/include/qla

lib_LTLIBRARIES = libQuantLibAddin.la

EXTRA_DIST = \
    autolink.hpp

include_HEADERS = \
    asianoption.hpp \
    basic.hpp \
    baseinstruments.hpp \
    barrieroption.hpp \
    basketoption.hpp \
    capfloor.hpp \
    cliquetoption.hpp \
    clientutils.hpp \
    config.hpp \
    couponvectors.hpp \
    dividendvanillaoption.hpp \
    fixedcouponbond.hpp \
    forwardvanillaoption.hpp \
    generalutils.hpp \
    instruments.hpp \
    interpolation.hpp \
    ohfunctions.hpp \
    options.hpp \
    processes.hpp \
    qladdin.hpp \
    qladdindefines.hpp \
    schedule.hpp \
    shortratemodels.hpp \
    simpleswap.hpp \
    swap.hpp \
    termstructures.hpp \
    typefactory.hpp \
    typeregistry.hpp \
    utilities.hpp \
    vanillaoption.hpp \
    volatilities.hpp \
    xibor.hpp \
    zerocouponbond.hpp \
    zerocurve.hpp \
    baseinstruments.hpp \
    ../Addins/ValueObjects/vo_basic.hpp \
    ../Addins/ValueObjects/vo_ohfunctions.hpp \
    ../Addins/ValueObjects/vo_r2r_instruments.hpp \
    ../Addins/ValueObjects/vo_simpleswap.hpp \
    ../Addins/ValueObjects/vo_xibor.hpp \
    ../Addins/ValueObjects/vo_capfloor.hpp \
    ../Addins/ValueObjects/vo_options.hpp \
    ../Addins/ValueObjects/vo_r2r_termstructures.hpp \
    ../Addins/ValueObjects/vo_swap.hpp \
    ../Addins/ValueObjects/vo_couponvectors.hpp \
    ../Addins/ValueObjects/vo_processes.hpp \
    ../Addins/ValueObjects/vo_r2r_utilities.hpp \
    ../Addins/ValueObjects/vo_termstructures.hpp \
    ../Addins/ValueObjects/vo_instruments.hpp \
    ../Addins/ValueObjects/vo_r2r_ilinstruments.hpp \
    ../Addins/ValueObjects/vo_schedule.hpp \
    ../Addins/ValueObjects/vo_utilities.hpp \
    ../Addins/ValueObjects/vo_interpolation.hpp \
    ../Addins/ValueObjects/vo_r2r_iltermstructure.hpp \
    ../Addins/ValueObjects/vo_shortratemodels.hpp \
    ../Addins/ValueObjects/vo_volatilities.hpp


libQuantLibAddin_la_SOURCES = \
    asianoption.cpp \
    basic.cpp \
    barrieroption.cpp \
    basketoption.cpp \
    capfloor.cpp \
    cliquetoption.cpp \
    clientutils.cpp \
    complextyperegistry.cpp \
    couponvectors.cpp \
    dividendvanillaoption.cpp \
    enumregistry.cpp \
    fixedcouponbond.cpp \
    forwardvanillaoption.cpp \
    generalutils.cpp \
    ohfunctions.cpp \
    interpolation.cpp \
    processes.cpp \
    schedule.cpp \
    shortratemodels.cpp \
    simpleswap.cpp \
    swap.cpp \
    termstructures.cpp \
    utilities.cpp \
    vanillaoption.cpp \
    volatilities.cpp \
    xibor.cpp \
    zerocouponbond.cpp \
    zerocurve.cpp \
    ../Addins/ValueObjects/vo_basic.cpp \
    ../Addins/ValueObjects/vo_ohfunctions.cpp \
    ../Addins/ValueObjects/vo_r2r_instruments.cpp \
    ../Addins/ValueObjects/vo_simpleswap.cpp \
    ../Addins/ValueObjects/vo_xibor.cpp \
    ../Addins/ValueObjects/vo_capfloor.cpp \
    ../Addins/ValueObjects/vo_options.cpp \
    ../Addins/ValueObjects/vo_r2r_termstructures.cpp \
    ../Addins/ValueObjects/vo_swap.cpp \
    ../Addins/ValueObjects/vo_couponvectors.cpp \
    ../Addins/ValueObjects/vo_processes.cpp \
    ../Addins/ValueObjects/vo_r2r_utilities.cpp \
    ../Addins/ValueObjects/vo_termstructures.cpp \
    ../Addins/ValueObjects/vo_instruments.cpp \
    ../Addins/ValueObjects/vo_r2r_ilinstruments.cpp \
    ../Addins/ValueObjects/vo_schedule.cpp \
    ../Addins/ValueObjects/vo_utilities.cpp \
    ../Addins/ValueObjects/vo_interpolation.cpp \
    ../Addins/ValueObjects/vo_r2r_iltermstructure.cpp \
    ../Addins/ValueObjects/vo_shortratemodels.cpp \
    ../Addins/ValueObjects/vo_volatilities.cpp
